--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -161,7 +161,7 @@
         <script src="{% static 'comment/js/editor.js' %}?v=20230516.1"></script>
         <script src="{% static 'comment/js/activate-power.js' %}?v=20180120"></script>
         <script>
-            const sw = window.screen.width;
+            var sw = window.screen.width;
             if (sw > 1200) {
                 POWERMODE.colorful = true;
                 POWERMODE.shake = false;
