--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -22,6 +22,8 @@
     <script src="{% static 'blog/js/headroom.min.js' %}"></script>
     <!-- blog CSS -->
     <link href="{% static 'blog/css/base.css' %}?v=20230620.4" rel="stylesheet">
+    {#设置默认的全局变量stop_headroom，默认会自动隐藏导航，如果要固定导航可以在top-file里面重新设置这个变量为true#}
+    <script>var stop_headroom = false;</script>
     {% block top-file %}{% endblock %}
     <!--根据cookies判断是否启用暗色主题-->
     {% if not request.COOKIES.toggleTheme %}
@@ -87,9 +89,11 @@
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script>
     $(function () {
-        const myElement = document.querySelector(".blog-navbar");
-        const headroom = new Headroom(myElement);
-        headroom.init()
+        if (stop_headroom === false) {
+            const myElement = document.querySelector(".blog-navbar");
+            const headroom = new Headroom(myElement);
+            headroom.init()
+        }
     });
 </script>
 <script src="{% static 'blog/js/base.js' %}?v=20230614.1"></script>
