--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -10,6 +10,7 @@
 
 
 {% block top-file %}
+    <script>var stop_headroom = true;</script>
     {% if user.is_authenticated %}
         <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
     {% endif %}
