--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -10,11 +10,11 @@
 
 
 {% block top-file %}
-    <script>var stop_headroom = true;</script>
+{#    <script>var stop_headroom = true;</script>#}
     {% if user.is_authenticated %}
         <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
     {% endif %}
-    <link href="{% static 'blog/css/detail.css' %}?v=20230623.3" rel="stylesheet">
+    <link href="{% static 'blog/css/detail.css' %}?v=20230626.1" rel="stylesheet">
     <link href="{% static 'blog/css/monokai.css' %}?v=20230611.42" rel="stylesheet">
     <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
 {% endblock %}
