--- a/templates/search/blog/search.html
+++ b/templates/search/blog/search.html
@@ -63,22 +63,7 @@
                         {% endfor %}
                     </div>
                 {% endif %}
-                {% if is_paginated %}
-                    <div class="text-center mt-2 mt-sm-1 mt-md-0 mb-3 f-16">
-                        {% if page_obj.has_previous %}
-                            <a class="text-success" href="?q={{ query }}&amp;page={{ page_obj.previous_page_number }}">上一页</a>
-                        {% else %}
-                            <span class="text-secondary" title="当前页已经是首页">上一页</span>
-                        {% endif %}
-                        <span class="mx-2">第&nbsp;{{ page_obj.number }}&nbsp;/&nbsp;{{ paginator.num_pages }}&nbsp;页</span>
-                        {% if page_obj.has_next %}
-                            <a class="text-success"
-                               href="?q={{ query }}&amp;page={{ page_obj.next_page_number }}">下一页</a>
-                        {% else %}
-                            <span class="text-secondary" title="当前页已经是末页">下一页</span>
-                        {% endif %}
-                    </div>
-                {% endif %}
+                {% if is_paginated %}{% load_pages %}{% endif %}
             </div>
             <div class="col-lg-4">
                 {% include 'blog/tags/base_right.html' %}
