--- a/apps/blog/templates/blog/category.html
+++ b/apps/blog/templates/blog/category.html
@@ -25,16 +25,13 @@
                                 <i class="fa fa-edit ml-2 mr-1"></i>编辑分类</a>
                         </p>
                     {% endif %}
-
-
                 </div>
                 <div class="text-secondary font-weight-bold py-3 f-15 choice">
-                    {% url 'blog:category' search_instance.slug as base_category %}
-                    {% url 'blog:category_hot' search_instance.slug as hot_category %}
-                    <a class="pb-2 {% if request.path == base_category %}active{% endif %}" href="{{ base_category }}">
+                    <a class="pb-2 {% if not request.GET.sort %}active{% endif %}"
+                       href="{% url 'blog:category' search_instance.slug %}">
                         <i class="fa fa-bars mr-1"></i>时间排序</a>
-                    <a class="pb-2 ml-4 {% if request.path == hot_category %}active{% endif %}"
-                       href="{{ hot_category }}">
+                    <a class="pb-2 ml-4 {% if request.GET.sort == 'views' %}active{% endif %}"
+                       href="{% url 'blog:category' search_instance.slug %}?sort=views">
                         <i class="fa fa-fire mr-1"></i>热度排序</a>
                 </div>
                 {% load_article_summary articles user %}
