--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -12,24 +12,26 @@
 {% endblock %}
 
 {% block base_content %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8">
-            {% include 'blog/tags/carousel.html' %}
-            <div class="text-secondary font-weight-bold py-3 f-15 choice">
-                {% url 'blog:index' as base_index %}
-                {% url 'blog:index_hot' as hot_index %}
-                <a class="pb-2 {% if request.path == base_index %}active{% endif %}" href="{{ base_index }}">
-                    <i class="fa fa-bars mr-1"></i>时间排序</a>
-                <a class="pb-2 ml-4 {% if request.path == hot_index %}active{% endif %}" href="{{ hot_index }}">
-                    <i class="fa fa-fire mr-1"></i>热度排序</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                {% include 'blog/tags/carousel.html' %}
+                <div class="text-secondary font-weight-bold py-3 f-15 choice">
+                    <a class="pb-2 {% if not request.GET.sort %}active{% endif %}" href="{% url 'blog:index' %}">
+                        <i class="fa fa-bars mr-1"></i>时间排序</a>
+                    <a class="pb-2 ml-4 {% if request.GET.sort == 'views' %}active{% endif %}"
+                       href="{% url 'blog:index' %}?sort=views">
+                        <i class="fa fa-fire mr-1"></i>热度排序</a>
+                    <a class="pb-2 ml-4 {% if request.GET.sort == 'comment' %}active{% endif %}"
+                       href="{% url 'blog:index' %}?sort=comment">
+                        <i class="fa fa-comments mr-1"></i>评论排序</a>
+                </div>
+                {% load_article_summary articles user %}
+                {% if is_paginated %}{% load_pages %}{% endif %}
             </div>
-            {% load_article_summary articles user %}
-            {% if is_paginated %}{% load_pages %}{% endif %}
-        </div>
-        <div class="col-lg-4">
-            {% include 'blog/tags/base_right.html' %}
+            <div class="col-lg-4">
+                {% include 'blog/tags/base_right.html' %}
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
