--- a/apps/blog/templates/blog/timeline.html
+++ b/apps/blog/templates/blog/timeline.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load cache %}
 {% load static %}
 {% load blog_tags %}
 
@@ -18,6 +19,7 @@
     <div class="page-header mt-0">
         <h1 id="timeline"><i class="fa fa-hourglass-half mr-2"></i>建站日志</h1>
     </div>
+    {% cache 3600 * 24 'cache_name' %}
     <ul class="timeline" id="timeline">
         {% for timeline in timeline_list %}
         {% if timeline.side == 'L' %}
@@ -42,6 +44,7 @@
         <p>暂时没有时间线</p>
         {% endfor %}
     </ul>
+    {% endcache %}
 </div>
 {% endblock %}
 
