--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -12,18 +12,23 @@
                 <div class="media-body">
                     {% if article.is_top %}
                         <img class="float-right top-article-img" src="{% static 'blog/img/TOP.png' %}">{% endif %}
-                    <div class="text-muted mb-2 f-12">
+                    <div class="meta-container mb-2 f-12">
                         {% get_user_avatar_tag article.author %}
                         <span>{{ article.author }}</span>
-                        <span><i
-                                class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime }}</span>
+                        <span class="media-date">{{ article.create_date|naturaltime }}</span>
+                        <span class="media-tag-list">
+                            {% for tag in article.tags.all|slice:":4" %}
+                                <a class="media-tag" href="{{ tag.get_absolute_url }}">{{ tag.name }}</a>
+                                {% if not forloop.last %}<span class="media-tag-i">&#8226;</span>{% endif %}
+                            {% endfor %}
+                        </span>
                     </div>
                     <h2 class="mt-0 font-weight-bold text-info f-17">
                         <a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title }}</a>
                     </h2>
                     <p class="d-none d-sm-block mb-2 f-15">{{ article.summary|truncatechars:130 }}</p>
                     <p class="d-block d-sm-none mb-2 f-15">{{ article.summary|truncatechars:64 }}</p>
-                    <div class="text-muted mb-0 f-12">
+                    <div class="meta-container mb-0 f-12">
                         <a class="cate" href="{{ article.category.get_absolute_url }}" title="查看当前分类下更多文章">
                             <i class="fa fa-book mr-1"></i>{{ article.category }}</a>
                         <span><i class="fa fa-eye ml-2 mr-1"></i>{{ article.views }}</span>
