添加友情链接页面

--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -12,24 +12,23 @@
             <li class="nav-item mr-2">
                 {% url 'blog:index' as index_url %}
                 <a class="nav-link py-md-3 {% if request.path == index_url %}active{% endif %}"
-                   href="{{ index_url }}"><i class="fa fa-home mr-1"></i>首页<span class="sr-only">(current)</span></a>
+                   href="{{ index_url }}">首页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mr-2">
                 {% url 'blog:archive' as archive_url %}
                 <a class="nav-link py-md-3 {% if request.path == archive_url %}active{% endif %}"
-                   href="{{ archive_url }}"><i class="fa fa-archive mr-1"></i>归档</a>
+                   href="{{ archive_url }}">归档</a>
             </li>
             {% if tool_flag %}
                 <li class="nav-item mr-2">
                     {% url 'tool:total' as tool_url %}
                     <a class="nav-link py-md-3 {% if request.resolver_match.namespace == 'tool' %}active{% endif %}"
-                       href="{{ tool_url }}"><i class="fa fa-trophy mr-1"></i>在线工具</a>
+                       href="{{ tool_url }}">在线工具</a>
                 </li>
             {% endif %}
             {% if api_flag %}
                 <li class="nav-item mr-2 d-xs-block d-sm-none d-lg-block">
-                    <a class="nav-link py-md-3" href="{% url 'api:api-root' %}" target="_blank"><i
-                            class="fa fa-key mr-1"></i>API</a>
+                    <a class="nav-link py-md-3" href="{% url 'api:api-root' %}" target="_blank">API</a>
                 </li>
             {% endif %}
 
@@ -40,8 +39,7 @@
                        data-toggle="dropdown"
                        aria-haspopup="true"
                        aria-expanded="false"
-                    ><i class="fa fa-share-alt mr-1"></i>个人外链
-                    </a>
+                    >个人外链</a>
                     <div class="dropdown-menu dropdown-menu-left mt-0 border-0"
                          aria-labelledby="navbarDropdown">
                         {% for link_item in private_links %}
@@ -53,9 +51,14 @@
                 </li>
             {% endif %}
             <li class="nav-item mr-2 ">
+                {% url 'blog:friend' as friend_url %}
+                <a class="nav-link py-md-3 {% if request.path == friend_url %}active{% endif %}"
+                   href="{{ friend_url }}">友情链接</a>
+            </li>
+            <li class="nav-item mr-2 ">
                 {% url 'blog:about' as about_url %}
                 <a class="nav-link py-md-3 {% if request.path == about_url %}active{% endif %}"
-                   href="{{ about_url }}"><i class="fa fa-user-secret mr-1"></i>关于</a>
+                   href="{{ about_url }}">关于</a>
             </li>
             <form class="nav-item navbar-form mr-2 py-md-2" role="search" method="get" id="searchform"
                   action="{% url 'blog:search_view' %}">
