--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -520,6 +520,65 @@ ul.checklist li {
     color: #ea6f5a;
 }
 
+/*友情链接开始*/
+.friend-list {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 15px;
+    padding-top: 15px;
+}
+
+.friend-list .friend-container {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    user-select: none;
+    height: 150px;
+    width: 150px;
+    background-size: auto 150%;;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    animation-duration: 1s;
+    animation-delay: 0.1s;
+    visibility: visible;
+    box-shadow: 0 0 20px 0 rgba(44, 101, 144, 0.1);
+}
+
+.friend-img {
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(20px);
+    background-color: hsla(0, 0%, 100%, 0.1);
+}
+
+.friend-img img {
+    width: 60%;
+    border-radius: 50%;
+    transition: all 2s ease;
+    position: absolute;
+    top: 10%;
+    left: calc(50% - 45px);
+}
+
+.friend-container .friend-title {
+    width: 100%;
+    height: 30px;
+    background: #ffffff;
+    opacity: 0.5;
+    font-size: 14px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 0;
+    line-height: 30px;
+    text-align: center;
+}
+
+/*友情链接结束*/
+
 /*404页面+++++++++++++++++++++++*/
 .errorpage {
     margin: 30px 15px;
