--- a/templates/403.html
+++ b/templates/403.html
@@ -13,7 +13,7 @@
             <div class="col align-self-center error-img text-center">
                 <h1 style="font-size: 12rem;color: #ee795a">403</h1>
                 <div class="errormsg">
-                    <h3>你没有权限造访本星球，请返回地球...</h3>
+                    <h3>😠你没有权限造访本星球，请返回地球...</h3>
                     <a href="javascript:history.go(-1);">返回地球</a>
                 </div>
             </div>
