--- a/templates/404.html
+++ b/templates/404.html
@@ -15,7 +15,7 @@
                 <img class="img-fluid" src="{% static 'blog/img/404.png'%}">
             </div>
             <div class="errormsg">
-                <h3>哇哦！你好像访问到了异次元世界...</h3>
+                <h3>😔你好像访问到了异次元世界...</h3>
                 <a href="javascript:history.go(-1);">返回地球</a>
             </div>
         </div>
