--- a/templates/500.html
+++ b/templates/500.html
@@ -13,7 +13,7 @@
             <div class="col align-self-center error-img text-center">
                 <h1 style="font-size: 12rem;color: #ee795a">500</h1>
                 <div class="errormsg">
-                    <h3>当前页面功能异常，修复中...</h3>
+                    <h3>‼️当前页面功能异常，紧急修复中...</h3>
                     <a href="javascript:history.go(-1);">返回地球</a>
                 </div>
             </div>
